# mujoco-test

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: AddMujocoAndDependencies.cmake
examples/: CMakeLists.txt
include/sim/: mujoco_simulation.h
model/two_dof_leg/: scene.xml  two_dof_leg.xml
model/two_dof_leg/assets/: chassis.stl  motor.stl  shin.stl  thigh.stl  vslot.stl
src/: CMakeLists.txt
src/sim/: mujoco_simulation.cpp
